Session Flow - double scrollbar in request details fixed

--- a/css/overlay.css
+++ b/css/overlay.css
@@ -412,7 +412,6 @@
 }
 
 .tele-similarities-list {
-	overflow-y: scroll;
 	margin-top: 10px;
 }
 
